--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@
     font-display: swap;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     max-width: 1180px;
     margin: 0 auto;
@@ -299,6 +303,15 @@
     transform: scale(1.1);
 }
 
-.body {
-    scroll-behavior: smooth;
+@media screen and (max-width: 510px) {
+    .layout {
+        flex-direction: column;
+    }
+    .header.container {
+        width: 100%;
+    }
+    .hero {
+        width: 100%;
+        flex-direction: column;
+    }
 }
